--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.4",
+    "next": "14.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.0.0"
+    "typescript": "5.0.4",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/node": "20.0.0"
   }
 }
