--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@supabase/supabase-js": "^2.48.0",
     "next": "14.1.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "stripe": "^16.0.0"
   },
   "devDependencies": {
     "typescript": "5.0.4",
